# Signal-Slot-C-

./: CMakeLists.txt  README.md  main.cpp  moc_object.cpp  object.cpp  object.h
